src_old/objects/ProjectServiceQuestion__c.object
<CustomObject>
    <description>Relates a Question to a Project Service. Questions from Service Question are added by default when a Service is added to a Project Service. Additional Questions can be added. Project Service Question is related to Project Service Question, Question, and Question Variant.</description>
    <fields>
        <fullName>AILabel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AI Label</label>
        <referenceTo>AILabel__c</referenceTo>
        <relationshipLabel>Project Service Questions</relationshipLabel>
        <relationshipName>Project_Service_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CanRemove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Can Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefinedResponseCount__c</fullName>
        <label>DefinedResponseCount</label>
        <summaryFilterItems>
            <field>ProjectServiceQuestionDefinedResponse__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceQuestionDefinedResponse__c.ProjectServiceQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DefinedResponseLastModifiedDateForHT__c</fullName>
        <label>DefinedResponse LastModifiedDate For HT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DefinedResponseLastModifiedDate__c</fullName>
        <label>DefinedResponse Last Modified Date</label>
        <summarizedField>ProjectServiceQuestionDefinedResponse__c.LastModifiedDate</summarizedField>
        <summaryForeignKey>ProjectServiceQuestionDefinedResponse__c.ProjectServiceQuestion__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>HintLock__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HintLock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsItemQuestion__c</fullName>
        <formula>Question__r.ItemQuestion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Item Quesiton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTargetQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Target Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsVisibleToClient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>To hide a question from Supplier</description>
        <inlineHelpText>To hide a question from Supplier</inlineHelpText>
        <label>Is Visible to Client?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JumpDefinedResponseCount__c</fullName>
        <label>Jump Defined Response Count</label>
        <summaryFilterItems>
            <field>ProjectServiceQuestionDefinedResponse__c.JumpToAction__c</field>
            <operation>equals</operation>
            <value>QUESTION</value>
        </summaryFilterItems>
        <summaryForeignKey>ProjectServiceQuestionDefinedResponse__c.ProjectServiceQuestion__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>JumpToAction__c</fullName>
        <label>JumpTo Action</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>QUESTION</fullName>
                </value>
                <value>
                    <fullName>CONTINUE</fullName>
                </value>
                <value>
                    <fullName>RETURN</fullName>
                </value>
                <value>
                    <fullName>BRANCH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MaxValue__c</fullName>
        <label>Max  Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinValue__c</fullName>
        <label>Min Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OHId__c</fullName>
        <formula>IF(UPPER(ProjectService__r.ServiceTemplateVersion__c) == &apos;V2&apos;, Name,  Question__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OH Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Optional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Optional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ParentProjectServiceQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Parent Project Service Question</description>
        <inlineHelpText>Parent Project Service Question</inlineHelpText>
        <label>Parent Project Service Question</label>
        <referenceTo>ProjectServiceQuestion__c</referenceTo>
        <relationshipLabel>Project Service Questions</relationshipLabel>
        <relationshipName>ParentProjectServiceQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectId__c</fullName>
        <formula>ProjectService__r.Project__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectServiceName__c</fullName>
        <formula>ProjectService__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ProjectServiceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectService__c</fullName>
        <label>Project Service</label>
        <referenceTo>ProjectService__c</referenceTo>
        <relationshipLabel>ProjectServiceQuestions</relationshipLabel>
        <relationshipName>ProjectServiceQuestions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuestionHint__c</fullName>
        <label>Question Hint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionIndentationLevel__c</fullName>
        <formula>LEN( QuestionIndentation__c )-LEN(SUBSTITUTE(QuestionIndentation__c 
, &apos;.&apos;, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Indentation Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionIndentation__c</fullName>
        <label>Question Indentation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionNumberCalculated__c</fullName>
        <formula>IF(UPPER(ProjectService__r.ServiceTemplateVersion__c) == &apos;V2&apos;, QuestionIndentation__c , TEXT( QuestionNumber__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Number Calculated</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionNumber__c</fullName>
        <label>Question Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionText__c</fullName>
        <formula>Question__r.QuestionText__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <formula>TEXT(Question__r.QuestionType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionVariantText__c</fullName>
        <formula>IF(OR(ISNULL(QuestionVariant__c),QuestionVariant__c = &apos;&apos;), Question__r.QuestionText__c,  QuestionVariant__r.QuestionText__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Variant Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionVariant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Variant</label>
        <referenceTo>QuestionVariant__c</referenceTo>
        <relationshipLabel>Project Service Questions</relationshipLabel>
        <relationshipName>Project_Service_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Question__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>ProjectServiceQuestions</relationshipLabel>
        <relationshipName>ProjectServiceQuestions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ResponseAverage__c</fullName>
        <label>Response Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ResponseCount__c</fullName>
        <label>Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ResponseSum__c</fullName>
        <label>Response Sum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceId__c</fullName>
        <formula>ProjectService__r.Service__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ServiceQuestion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Service Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UniqueKey__c</fullName>
        <label>Unique Key</label>
        <length>250</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Project Service Question</label>
    <nameField>
        <displayFormat>PSQ-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Service Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>BranchingQuestionCannotBeOptional</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(QuestionType__c == &apos;Single-Select List&apos;,QuestionType__c == &apos;Yes/No&apos; ), ISPICKVAL(JumpToAction__c, &apos;BRANCH&apos;), Optional__c )</errorConditionFormula>
        <errorMessage>Branching question cannot be optional.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MinMaxValue_BothOrNeither</fullName>
        <active>true</active>
        <errorConditionFormula>OR(AND(ISBLANK(MinValue__c),NOT(ISBLANK(MaxValue__c))),AND(NOT(ISBLANK(MinValue__c)),ISBLANK(MaxValue__c)))</errorConditionFormula>
        <errorMessage>Both min / max value should be added or neither of them should have a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validateOneActiveResponse</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( NOT(ISNEW()), 
					DefinedResponseCount__c &lt; 2,  
					NOT(ISPICKVAL(ProjectService__r.Project__r.CloneStatus__c,&apos;Started&apos;)),
					OR(QuestionType__c == &apos;Single-Select List&apos;,QuestionType__c ==&apos;Multi-Select List&apos; ))</errorConditionFormula>
        <errorMessage>There should be at least two active Defined Responses for this question.</errorMessage>
    </validationRules>
</CustomObject>